--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -8,9 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "fabric": "^5.3.0",
+    "vue": "^3.3.4",
+    "vue-fabric-wrapper": "^0.3.71"
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.5",
     "@vitejs/plugin-vue": "^4.4.0",
     "vite": "^4.4.11"
   }
