--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "fabric": "^5.3.0",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.3.4",
     "vue-fabric-wrapper": "^0.3.71"
   },
