--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -11,7 +11,8 @@
     "fabric": "^5.3.0",
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.4",
-    "vue-fabric-wrapper": "^0.3.71"
+    "vue-fabric-wrapper": "^0.3.71",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@types/fabric": "^5.3.5",
