--- a/server/infra/docker-compose.yml
+++ b/server/infra/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3.9'
 services:
+  web:
+    image: nginx:1.20-alpine
+    ports:
+      - 8000:80
+    volumes:
+      - ./src:/data
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    working_dir: /data
+
   app:
     build: ./php
     volumes:
