--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^2.0.0",
+    "axios": "^1.6.2",
     "fabric": "^5.3.0",
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.11",
