--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -14,9 +14,11 @@
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.11",
     "vue-fabric-wrapper": "^0.3.71",
+    "vue-loading-overlay": "^6.0.3",
     "vue-qrcode-reader": "^5.4.1",
     "vue-router": "^4.2.5",
-    "vue3-qr-reader": "^1.0.0"
+    "vue3-qr-reader": "^1.0.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/fabric": "^5.3.5",
