--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -18,6 +18,7 @@
     "vue-qrcode-reader": "^5.4.1",
     "vue-router": "^4.2.5",
     "vue3-qr-reader": "^1.0.0",
+    "vue3-youtube": "^0.1.9",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
