--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^2.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "axios": "^1.6.2",
     "fabric": "^5.3.0",
     "socket.io-client": "^4.7.2",
