--- a/server/infra/docker-compose.yml
+++ b/server/infra/docker-compose.yml
@@ -1,4 +1,10 @@
 version: '3.9'
+networks:
+  proxy:
+    external: true
+  internal:
+    external: true
+
 services:
   web:
     image: nginx:1.20-alpine
@@ -8,6 +14,8 @@ services:
       - ./src:/data
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     working_dir: /data
+    networks:
+      - proxy
 
   app:
     build: ./php
