--- a/server/redis/docker-compose.yml
+++ b/server/redis/docker-compose.yml
@@ -1,4 +1,9 @@
 version: '3.9'
+networks:
+  proxy:
+    external: true
+  internal:
+    external: true
 services:
   redis:
     image: "redis:latest"
@@ -6,3 +11,5 @@ services:
       - "6379:6379"
     volumes:
       - "./data/redis:/data"
+    networks:
+      - proxy
